--- a/PROP_MGMNT/package.json
+++ b/PROP_MGMNT/package.json
@@ -24,6 +24,7 @@
     "jquery": "3.3.1",
     "moment": "2.21.0",
     "ng-jhipster": "0.5.3",
+    "ng2-charts": "^1.6.0",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "0.5.1",
     "ngx-webstorage": "2.0.1",
@@ -56,7 +57,7 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
-    "jest": "22.4.3",
+    "jest": "23.5",
     "jest-preset-angular": "5.2.2",
     "jest-sonar-reporter": "2.0.0",
     "lint-staged": "7.0.0",
