Charts integration for income/expense

--- a/PROP_MGMNT/pom.xml
+++ b/PROP_MGMNT/pom.xml
@@ -101,6 +101,13 @@
     </dependencyManagement>
 
     <dependencies>
+    	<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.0</version>
+		    <scope>provided</scope>
+		</dependency>
+    
         <dependency>
             <groupId>io.github.jhipster</groupId>
             <artifactId>jhipster-framework</artifactId>
