--- a/PROP_MGMNT/package.json
+++ b/PROP_MGMNT/package.json
@@ -27,6 +27,7 @@
     "ng2-charts": "^1.6.0",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "0.5.1",
+    "ngx-paypal": "^3.2.1",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.1.0",
